tests/errors/f_1_2_3.ctp

class (Foo:
    {1,2,3}:int:a[3]
)

        